--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
+html,body {
+  /*margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: Raleway;*/
+	height: 100%;
+	width: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+	font-family: cursive;
+	font-size: 4rem;
+	background-color: DarkTurquoise;
+	color: White;
+	height: 105px;
+	padding-left: 30px;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+	margin-bottom: 30px;
+}
+
+ul{
+  list-style-type: none;
+  background-color: Gray;
+}
+
+li{
+  height: 25px;
+  font-family: cursive;
+}
+
+.recipe-bar {
+  cursor: pointer;
+	width: 15%;
+	border-width: 0;
+	border-radius: 0;
+	margin-left: 5%;
+	text-align: left;
 }
