updated css to look prettier

--- a/src/index.css
+++ b/src/index.css
@@ -24,23 +24,31 @@ header {
 	padding-left: 30px;
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
 	margin-bottom: 30px;
+  border-radius: 15px;
 }
 
 ul{
   list-style-type: none;
   background-color: Gray;
+  border-radius: 15px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+  padding-bottom: 5%;
+  padding-top: 5%;
 }
 
 li{
   height: 25px;
   font-family: cursive;
+
+}
+
+a {
+  cursor: pointer;
 }
 
 .recipe-bar {
-  cursor: pointer;
+
 	width: 15%;
-	border-width: 0;
-	border-radius: 0;
 	margin-left: 5%;
 	text-align: left;
 }
