--- a/src/index.css
+++ b/src/index.css
@@ -29,26 +29,37 @@ header {
 
 ul{
   list-style-type: none;
+  color: white;
+}
+
+li{
+  height: 25px;
+  font-family: Consolas;
+}
+
+a {
+  cursor: pointer;
+  color: white;
+}
+
+.recipe-list-header h2 {
+  color: DarkTurquoise;
+  margin-left: 15%;
+  text-align: left;
+}
+
+.recipe-list {
+  color: DarkTurquoise;
+  text-align: left;
+}
+
+.recipe-bar {
+	width: 15%;
+	margin-left: 5%;
+	text-align: right;
   background-color: Gray;
   border-radius: 15px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
   padding-bottom: 5%;
   padding-top: 5%;
-}
-
-li{
-  height: 25px;
-  font-family: cursive;
-
-}
-
-a {
-  cursor: pointer;
-}
-
-.recipe-bar {
-
-	width: 15%;
-	margin-left: 5%;
-	text-align: left;
 }
