--- a/src/index.css
+++ b/src/index.css
@@ -21,24 +21,26 @@ code {
 }
 
 header {
-	font-family: sans-serif;
+	font-family: cursive;
 	font-size: 50px;
-	background-color: whitesmoke;
-	color: black;
-	height: 75px;
+	background-color: #2A324B;
+	color: white;
+	height: 85px;
   text-align: left;
   padding-left: 40px;
 	padding-top: 10px;
+  padding-bottom: 10px;
 	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
 }
 
 ul{
   list-style-type: decimal-leading-zero;
-  background-color: #45455F;
+  background-color: #767B91;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
   height: 100vh;
   padding-bottom: 5%;
   padding-top: 5%;
+  padding-left: 5%;
 }
 
 li{
@@ -51,9 +53,10 @@ a {
   cursor: pointer;
 }
 
-.recipe-bar {
+.nav-bar {
 	width: 200px;
 	margin-left: 0px;
+  margin-right: 5px;
 	text-align: left;
 }
 
@@ -79,4 +82,23 @@ a {
 .recipes p {
   text-align: left;
   padding-left: 15px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #828593;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
