--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ header {
 	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
 }
 
-ul{
+.nav-bar ul{
   list-style-type: decimal-leading-zero;
   background-color: #767B91;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
@@ -41,6 +41,7 @@ ul{
   padding-bottom: 5%;
   padding-top: 5%;
   padding-left: 5%;
+	border-radius: 5px;
 }
 
 li{
