--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ header {
 	border-radius: 5px;
 }
 
-li{
+.nav-bar li{
   height: 25px;
   font-family: sans-serif;
   color: #ACACC3;
@@ -102,4 +102,18 @@ a {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.recipe-image {
+	display: grid;
+	align-items: flex-end;
+}
+
+.recipe-image img{
+	max-width: 10%;
+}
+
+.recipe-cookware {
+	display: grid;
+	align-items: flex-start;
 }
