--- a/src/index.css
+++ b/src/index.css
@@ -34,14 +34,12 @@ header {
 }
 
 .nav-bar ul{
-  list-style-type: decimal-leading-zero;
   background-color: #767B91;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
   height: 100vh;
   padding-bottom: 5%;
   padding-top: 5%;
   padding-left: 5%;
-	border-radius: 5px;
 }
 
 .nav-bar li{
@@ -80,10 +78,16 @@ a {
   padding-left: 15px;
   padding-bottom: 10px;
 }
+.recipes h3 {
+  font-family: sans-serif;
+  padding-left: 15px;
+  padding-bottom: 10px;
+}
 
 .recipes p {
+  font-family: sans-serif;
   text-align: left;
-  padding-left: 15px;
+  padding-left: 5%;
 }
 
 .dropdown {
@@ -109,14 +113,26 @@ a {
 
 .recipe-image {
 	display: grid;
-	align-items: flex-end;
+	align-items: flex-center;
+  margin-left: 5%;
+  margin-top: -5%;
 }
 
 .recipe-image img{
-	max-width: 10%;
+	max-width: 15%;
 }
 
 .recipe-cookware {
 	display: grid;
 	align-items: flex-start;
+}
+
+.recipe-title {
+  background-color: #C7CCDB;
+  padding-top: 5px;
+}
+
+.recipes ul {
+  text-align: left;
+  padding-left: 5%;
 }
