--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ a {
   background-color: #828593;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  padding: 14px 10px;
   z-index: 1;
 }
 
@@ -112,14 +112,16 @@ a {
 }
 
 .recipe-image {
-	display: grid;
-	align-items: flex-center;
-  margin-left: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
   margin-top: -5%;
 }
 
 .recipe-image img{
-	max-width: 15%;
+	max-width: 30%;
+  align-items: center;
 }
 
 .recipe-cookware {
@@ -134,5 +136,10 @@ a {
 
 .recipes ul {
   text-align: left;
-  padding-left: 5%;
+  padding-left: 8%;
+}
+
+.recipes ol {
+  text-align: left;
+  padding-left: 8%;
 }
