--- a/src/index.css
+++ b/src/index.css
@@ -119,8 +119,13 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  margin-top: -5%;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.recipe-image img {
+  object-fit: fill;
 }
 
 .recipe-image img{
