--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,6 @@ a {
   font-family: sans-serif;
 	width: 200px;
 	margin-left: 0px;
-  margin-right: 5px;
 	text-align: left;
 }
 
@@ -69,7 +68,7 @@ a {
   margin-right: 15px;
   height: 100%;
   width: 100%;
-  background-color: whitesmoke;
+  background-color: #EFEFEF;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
 }
@@ -77,7 +76,6 @@ a {
 .recipes h1 {
   font-family: sans-serif;
   text-align: left;
-  border-bottom: 3px solid #EFEFEF;
   padding-left: 15px;
   padding-bottom: 10px;
 }
@@ -113,6 +111,7 @@ a {
 .dropdown:hover .dropdown-content {
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .recipe-image {
@@ -120,7 +119,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  margin-top: -5%;
+  margin-top: -8%;
 }
 
 .recipe-image img{
@@ -136,6 +135,7 @@ a {
 .recipe-title {
   background-color: #C7CCDB;
   padding-top: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .recipes ul {
@@ -146,4 +146,10 @@ a {
 .recipes ol {
   text-align: left;
   padding-left: 8%;
+}
+
+.recipe-list {
+  margin-left: 15px;
+  margin-top: 15px;
+
 }
