--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ a {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 14px 10px;
   z-index: 1;
+  /* text-underline-position: under; */
 }
 
 .dropdown:hover .dropdown-content {
@@ -157,5 +158,9 @@ a {
 .recipe-list {
   margin-left: 15px;
   margin-top: 15px;
+  margin-right: 15px;
+}
 
+.shopping-list{
+  text-align: left;
 }
