--- a/src/components/RecipeCard.css
+++ b/src/components/RecipeCard.css
@@ -1,4 +1,21 @@
+.recipe-card {
+    border-radius: 10px;
+    background-color: #E0E0E0;
+    height: 250px;
+}
+
+.recipe-card:hover {
+    transition: transform 0.3s ease-in-out;
+    transform: scale(1.05);
+}
+
+a {
+    cursor: pointer;
+    font-family: sans-serif;
+}
+
 .recipe-card-img {
+    border-radius: 10px;
     width: 300px;
     height: 200px;
     object-fit: cover;
