super super minor changes to css

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,6 @@
 .recipe-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 15px;
     flex-wrap: wrap;
 }
