updated shopping cart css stuff

--- a/src/index.css
+++ b/src/index.css
@@ -204,13 +204,26 @@ a {
   margin-left: 0px;
 }
 
-.shopping-list-items p,
+.shopping-list-items p {
+  margin-left: 10px;
+  margin-bottom: 8px;
+  display: inline-flex;
+  font-size: 20px;
+  font-family: sans-serif;
+  margin-top: 10px;
+}
+
+.shopping-list-items:hover p {
+  cursor: default;
+}
+
 .shopping-list-items button {
     margin-left: 10px;
     margin-bottom: 8px;
-    display: inline;
+    display: inline-block;
     font-size: 20px;
     font-family: sans-serif;
+    margin-top: 5px;
 }
 
 .shopping-list-item-x{
@@ -221,7 +234,7 @@ a {
 .shopping-list-item-x:hover {
   margin-left: 5px;
   cursor: pointer;
-  border: 1px solid #2A324B;
+  border: .5px solid #2A324B;
   border-radius: 3px;
 }
 
@@ -235,4 +248,54 @@ a {
   color: black;
   text-decoration: underline;
   cursor: pointer;
+}
+
+.shopping-cart-title {
+  position: relative;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 15px;
+  height: 43px;
+}
+
+.shopping-cart-title:hover {
+  position: relative;
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 15px;
+  height: 43px;
+}
+
+.shopping-cart-title h2 {
+  position: relative;
+  margin-left: 60px;
+  margin-top: -33px;
+  font-size: 40px;
+  height: 40px;
+}
+
+.shopping-cart-title:hover h2 {
+  position: fixed;
+  margin-left: 60px;
+  margin-top: -15px;
+  font-size: 43px;
+  height: 40px;
+  cursor: default;
+}
+
+.shopping-cart-title .hover-icon i {
+  visibility: hidden;
+}
+
+.shopping-cart-title:hover .hover-icon i {
+  visibility: visible;
+  cursor: default;
+  position: absolute;
+  top: 28px;
+  left: 5px;
+  height: 43px;
+}
+
+.shopping-cart-title:hover i {
+  visibility: hidden;
 }
