--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -8%;
+  margin-top: 3%;
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -170,6 +170,10 @@ a {
   margin-left: 15px;
   margin-top: 15px;
   margin-right: 15px;
+}
+
+.recipe-card {
+  margin-bottom: 15px;
 }
 
 .shopping-list{
@@ -319,4 +323,68 @@ a {
 
 .create-content {
   margin-left: 30px;
+}
+
+.ingredients-list li {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
+
+.ingredients-list li::before {
+  content: "•";
+  margin-right: -20px;
+  margin-left: -10px;
+}
+
+.ingredients-list li p {
+  display: inline;
+  margin-bottom: 5px;
+}
+
+.ingredients-list li button {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.ingredients-list:hover li button {
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.recipe-content {
+  font-family: sans-serif;
+}
+
+.action-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.action-buttons a,
+.action-buttons button {
+  margin-top: 15px;
+  align-items:center;
+  margin-bottom: 25px;
+  margin-left: 10px;
+  border: none;
+  cursor: pointer;
+  color: #2A324B;
+}
+
+.recipe-category h2, 
+.recipe-category h3 {
+  margin-left: 25px;
+}
+
+.recipe-cookware ul{
+  margin-bottom: 5px;
+  margin-top: 5px;
+}
+
+.procedure ol{
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
