--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,10 @@ header {
   background-color: #767B91;
   border-radius: 10px;
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
-  height: 100vh;
+  height: 100%;
+  width: 200px;
+  margin-left: 15px;
+  margin-bottom: 5px;
   padding-bottom: 5%;
   padding-top: 5%;
   padding-left: 5%;
@@ -63,6 +66,7 @@ a {
   min-width: 200px;
 	margin-left: 0px;
 	text-align: left;
+  margin-top: 15px;
 }
 
 .recipes {
@@ -323,6 +327,8 @@ a {
 
 .create-content {
   margin-left: 30px;
+  font-family: sans-serif;
+  font-size: 20px;
 }
 
 .create-button {
